# chipcard

./: .gitignore  README.rst  pyproject.toml
doc/: conf.py  glossary.rst  index.rst
