[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chipcard"
version = "0.1.0"
description = "Python package to access chipcards"
authors = ["Jörn Heissler <nosuchaddress@joern.heissler.de>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/joernheissler/chipcard"
repository = "https://github.com/joernheissler/chipcard"
keywords = [
    "chipcard",
    "pcsc",
    "smartcard",
    "ISO-7816",
]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
]


[tool.poetry.dependencies]
python = "^3.7"
asn1crypto = "^1.3.0"
lazy = "^1.4"
anyio = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
tox = "^3.14.3"
coverage = "^5.0.1"
sphinx = { version = "^2.4", optional = true }
sphinx-rtd-theme = { version = "^0.4", optional = true }

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.black]
line-length = 112

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = True
envlist = py37, py38

[testenv]
skip_install = true
whitelist_externals = poetry
commands =
    poetry install -vvv
    poetry run mypy --strict chipcard tests
    poetry run coverage erase
    poetry run coverage run -m pytest -v --strict tests
    poetry run coverage html
"""

[tool.coverage]

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
branch = true
source = [
    "tests",
    "chipcard",
]

[tool.coverage.html]
directory = "coverage_html_report"
